[gd_scene load_steps=5 format=3 uid="uid://c4ait6vebmxio"]

[ext_resource type="Script" path="res://scenes/components/damage_num_component/damage_num_component.gd" id="1_ghy2o"]

[sub_resource type="Animation" id="Animation_fdgsc"]
resource_name = "Damage_PopUp"
length = 0.75
step = 0.05
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DamageLabel:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.15, 0.5, 0.5001, 0.75)
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.75),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_dsnxs"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DamageLabel:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yt1j2"]
_data = {
"Damage_PopUp": SubResource("Animation_fdgsc"),
"RESET": SubResource("Animation_dsnxs")
}

[node name="DamageNumComponent" type="Node2D"]
script = ExtResource("1_ghy2o")

[node name="DamageLabel" type="Label" parent="."]
modulate = Color(1, 0, 0, 0)
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DamageAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yt1j2")
}
autoplay = "Damage_PopUp"
